Working on padding and spacing issues

--- a/wp-content/themes/CustomParallax/style.css
+++ b/wp-content/themes/CustomParallax/style.css
@@ -685,7 +685,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b2e1ff', end
 	padding:0px 25px;
 
 }
-
+.container {
+	margin-top: 0px;
+}
 #wrapper {
 	margin-top: 20px;
 }
